build: 修改反射工具包